[feat] CoffeeChatList 반환 API (#435)